# rag

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
answer_generation_agent/: __init__.py
answer_generation_agent/app/: __init__.py  entrypoint.py
answer_generation_agent/config/: __init__.py  settings.py
answer_generation_agent/generation/: __init__.py  answer_generation.py  answer_output_builder.py  citation_mapping.py  input_normalization.py  prompt_template.py  workflow.py
answer_generation_agent/schemas/: __init__.py  _serialization.py  generation.py
answer_generation_agent/scripts/: __init__.py  run_answer_generation.py
answer_verification_agent/: __init__.py  workflow.py
answer_verification_agent/app/: __init__.py  entrypoint.py
answer_verification_agent/config/: __init__.py  settings.py
answer_verification_agent/evaluator/: __init__.py  prompt.py  providers.py
answer_verification_agent/qca/: __init__.py  records.py
answer_verification_agent/regeneration/: __init__.py  request.py
app/: CLAUDE.md  __init__.py  config.py
app/adapters/: __init__.py  (+1 more)
docs/: api-spec.md  architecture.md  atlassian-api.md  db-schema.md  rag-pipeline-design.md  sse-frontend-contract.md
examples/: demo_data_layer.py  demo_search.py
history_manager_agent/: __init__.py  workflow.py
query_routing_agent/: __init__.py  workflow.py
samples/: evaluation_set.json
scripts/: extract_golden_set.py  format.sh  ingest_samples.py  lint.sh  run_evaluation.py  test.sh
tests/: test_config.py  test_metrics.py  test_smoke.py
(+142 files in other folders)
